--- a/week1.ipynb
+++ b/week1.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,26 +381,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "After I wrote the below review, the manufacturer contacted me and explained how to use this.  Instead of the (current) picture on Amazon where the phone is placed vertically, you actually use the stand with the phone placed horizontally.  Then the charge / sync cable goes through the hole and you can charge from the side.  When used in landscape position this stand does make more sense so I'm upgrading this review from 2 stars to 4 stars (which I rarely do, but in this case user error) with a star off for lack of documentation.  Manufacturer has said he will include directions and I would also encourage him to update the photos on Amazon with more examples of how this can be used.  The wood quality is indeed good and it's a sturdy little stand.  I'm trying to think of when I'd actually use this stand... perhaps for Facetime chats.  I also think it would be useful for someone in an open office environment if they want to keep their phone on their desk and see alerts / notifications easily.  Hope this updated review helps.\n",
-      "\n",
-      "ORIGINAL REVIEW:\n",
-      "I am throwing this stand in the garbage.  While it's crafted of a nice wood, it is not functional as near as I can tell.  It does not come with instructions and as you can see from the product description, even that is confusing since the English is poorly translated Chinese.  The iPhone sits on the stand just fine, but when it's on the stand, there is no way the plug on the bottom  will plug in -- the stand blocks it.  If you turn the iPhone over, the plug is on the top, which just looks strange.  And I'm not at all sure what the hole in the back of the stand is supposed to do.  Also included are four plastic feet, again no instructions, so I affixed them to the bottom of the stand and it began to wobble.\n",
-      "\n",
-      "Perhaps someone else will figure out how to work this thing and post a review, but as far as I'm concerned, the out of the box experience was terrible.\n",
-      "\n",
-      "Sorry, I cannot recommend.\n",
-      "\n",
-      "Sample provided in exchange for an honest review.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(reviews[0][\"reviewText\"])"
    ]
@@ -447,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,33 +445,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "wrote review manufacturer contacted explained use instead current picture amazon phone placed vertically actually use stand phone placed horizontally charge sync cable goes hole charge used landscape position stand does make sense m upgrading review stars stars rarely case user error star lack documentation manufacturer said include directions encourage update photos amazon examples used wood quality good s sturdy little stand m trying think d actually use stand facetime chats think useful open office environment want phone desk alerts notifications easily hope updated review helps original review throwing stand garbage s crafted nice wood functional near tell does come instructions product description confusing english poorly translated chinese iphone sits stand just fine s stand way plug plug stand blocks turn iphone plug just looks strange m sure hole stand supposed included plastic feet instructions affixed stand began wobble figure work thing post review far m concerned box experience terrible sorry recommend sample provided exchange honest review\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import re\n",
     "\n",
     "with open(\"stopwords-en.txt\", \"r\") as f:\n",
     "    stopwords = set(f.read().splitlines())\n",
     "\n",
-    "punctuation_pattern = r\"[\\\"'\\-\\[\\]\\(\\)–—…,:;!?\\.]\"\n",
+    "punctuation_pattern = r\"[\\\"'\\-\\[\\]\\(\\)–—…,:;!?\\.\\/]\"\n",
     "\n",
-    "def remove_punct_stopwords(text):\n",
+    "def preprocess_text(text):\n",
     "    text = re.sub(punctuation_pattern, \"\", text)\n",
+    "    text = text.lower()\n",
     "    words = text.split()\n",
     "    words = [w for w in words if w not in stopwords]\n",
     "    return \" \".join(words)\n",
     "\n",
     "for review in reviews_with_text:\n",
-    "    review[\"reviewText\"] = remove_punct_stopwords(review[\"reviewText\"])\n",
+    "    review[\"reviewText\"] = preprocess_text(review[\"reviewText\"])\n",
     "\n",
     "print(reviews_with_text[0][\"reviewText\"])"
    ]
@@ -512,7 +488,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use this cell for your code"
+    "%pip install nltk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.stem import PorterStemmer\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import nltk\n",
+    "nltk.download('punkt_tab')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stemmer = PorterStemmer()\n",
+    "\n",
+    "def stem_text(text):\n",
+    "    words = word_tokenize(text)\n",
+    "    stemmed_words = [stemmer.stem(w) for w in words]\n",
+    "    return \" \".join(stemmed_words)\n",
+    "\n",
+    "for review in reviews_with_text:\n",
+    "    review[\"reviewText\"] = stem_text(review[\"reviewText\"])\n",
+    "\n",
+    "print(reviews_with_text[0][\"reviewText\"])"
    ]
   },
   {
@@ -528,7 +535,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Use this cell for your code"
+    "pos_reviews = []\n",
+    "neg_reviews = []\n",
+    "\n",
+    "for review in reviews_with_text:\n",
+    "    rating = review.get(\"overall\", None)\n",
+    "    text = review[\"reviewText\"]\n",
+    "    \n",
+    "    if rating in [4, 5]:\n",
+    "        pos_reviews.append(text)\n",
+    "    elif rating in [1, 2]:\n",
+    "        neg_reviews.append(text)\n",
+    "\n",
+    "with open(\"pos.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for line in pos_reviews:\n",
+    "        f.write(line + \"\\n\")\n",
+    "\n",
+    "with open(\"neg.txt\", \"w\", encoding=\"utf-8\") as f:\n",
+    "    for line in neg_reviews:\n",
+    "        f.write(line + \"\\n\")\n",
+    "\n",
+    "print(f\"Saved {len(pos_reviews)} positive and {len(neg_reviews)} negative reviews.\")"
    ]
   },
   {
@@ -573,6 +600,61 @@
     "Laura|Callahan|1994-03-05\n",
     "Anne|Dodsworth|1994-11-15\n",
     "sqlite>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "2.\n",
+    "SELECT CustomerID, COUNT(*) AS num_orders\n",
+    "FROM Orders\n",
+    "GROUP BY CustomerID\n",
+    "ORDER BY num_orders DESC;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "3.\n",
+    "SELECT DISTINCT c.CompanyName\n",
+    "FROM Customers c\n",
+    "JOIN Orders o ON c.CustomerID = o.CustomerID\n",
+    "JOIN OrderDetails od ON o.OrderID = od.OrderID\n",
+    "JOIN Products p ON od.ProductID = p.ProductID\n",
+    "WHERE p.ProductName = 'Chai';"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "4.\n",
+    "SELECT OrderID, CustomerID, OrderDate, ShippedDate\n",
+    "FROM Orders\n",
+    "WHERE ShippedDate IS NULL;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "5.\n",
+    "SELECT c.CompanyName, COUNT(o.OrderID) AS num_orders\n",
+    "FROM Customers c\n",
+    "JOIN Orders o ON c.CustomerID = o.CustomerID\n",
+    "GROUP BY c.CustomerID, c.CompanyName\n",
+    "ORDER BY num_orders DESC\n",
+    "LIMIT 1;"
    ]
   }
  ],
